<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainViewModel"
            type="com.example.flickrexample.viewmodel.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainFragment">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_horizontal_margin"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_search_images"
                    android:hint="@string/search_images_hint"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

                <ImageButton
                    android:id="@+id/button_search_images"
                    android:contentDescription="@string/content_description_search_images"
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    app:srcCompat="@drawable/ic_search_black_24dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_image_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/black"
                    android:contentDescription="@string/content_description_images_list" />

                <TextView
                    android:id="@+id/text_view_loading_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/loading_images"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:visibleGone="@{mainViewModel.isLoading()}" />

                <TextView
                    android:id="@+id/text_view_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_loading_images"
                    android:background="@android:color/holo_red_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/error"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:visibleGone="@{mainViewModel.hasError()}" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>